--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/consul": "^0.40.0",
     "consul": "^1.2.0",
     "dotenv": "^16.3.1",
-    "hardhat": "^2.17.0"
+    "hardhat": "^2.17.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "@openzeppelin/contracts": "^4.9.3",
-    "ts-node": "^10.9.1"
+    "@openzeppelin/contracts": "^4.9.3"
   }
 }
